src/test/testData/kubernetes/KUBE002/deployment.yaml.denied
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: nginx
        securityContext:
          capabilities:
            add: [<error descr="Container requests insecure Linux capabilities. Left only necessary.">"SETPCAP"</error>, <error descr="Container requests insecure Linux capabilities. Left only necessary.">"MAC_OVERRIDE"</error>]
        image: nginx:1.14.2
        ports:
        - containerPort: 80